[package]
name = "rtun"
version = "0.1.0"
edition = "2021"
authors = ["Agustí Moll"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
etherparse = "0.14.3"
ipnet = "2.9.0"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tun = "0.11.4"
